      audio thread isn't running
    - fixed crash when removing channel with active voices (#116)
    - bugfix: on sample reference changes (instrument editor), only
      un-cache the respective sample if it's really not used by any
      sampler engine anymore
    - re-cache samples in case they were changed by an instrument editor,
      e.g. when a sample was added while playing (#82)

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP event "DEVICE_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain MIDI input devices (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP commands: FIND LOST DB_INSTRUMENT_FILES and
      SET DB_INSTRUMENT FILE_PATH
    - added new LSCP command: SEND CHANNEL MIDI_DATA which can be used by
      frontends to send MIDI messages to specific sampler channel
    - added two additional fields to GET FILE INSTRUMENT INFO command -
      KEY_BINDINGS and KEYSWITCH_BINDINGS
    - bugfix: the bank number provided by MIDI_INSTRUMENT_INFO notifications
      was incorrect
    - Optimized the retrieval of the MIDI instrument mappings
    - added new LSCP command "SET VOICES" to globally alter the maximum
      amount of voices, added new LSCP event "GLOBAL_INFO:VOICES" which will
      be triggered respectively
    - added new LSCP command "SET STREAMS" to globally alter the maximum
      amount of disk streams, added new LSCP event "GLOBAL_INFO:STREAMS"
      which will be triggered respectively
    - bugfix: retry if "select" returns EINTR (this fixes a crash when
      a gigedit file dialog is opened)
    - close all connections when LSCPServer is deleted

  * Bug fixes:
    - fixed a crash which occurs when removing a sampler channel waiting